--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,7 @@ body{
     width: 170px;
     display: inline;
     left: 10px;
+    top: 25px;
 }
 
 #date{
@@ -183,6 +184,7 @@ body{
     position: absolute;
     left: 220px;
     display: inline;
+    top: 75px;
 }
 
 #customer01{
