--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,9 +104,14 @@ body{
     left:-40px;
 }
 
-.btn {
+#customer_btn{
     position: relative;
-    top: -310px;
+    top: -300px;
+    left: 860px;
+}
+#item_btn {
+    position: relative;
+    top: -250px;
     left: 860px;
 }
 
